# cpp-func-invoke

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build-project.bat  conanfile.txt  func_invoke.hpp
.github/workflows/: main.yaml
func_invoke/: func_invoke.hpp
test/: CMakeLists.txt  example_lamda_and_function.cpp  example_member_function.cpp  example_user_type.cpp  examples.cpp
